framework/src/main/java/org/example/framework/error/ErrorCode.java
package org.example.framework.error;

public interface ErrorCode {

}
